# concrete-example-client-server

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: details.rs  main.rs
commons/: Cargo.toml
commons/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
