[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concrete = { version = "0.2.0-beta", features = ["serde", "shortints", "integers"] }
byteorder = "1.4.3"
bincode = "1.3.3"



